# guarda-android-wallets

./: .gitignore  README.md  build.gradle  cargo-config.toml  gradle.properties  settings.gradle
app/: build.gradle  fabric.properties  (+2 more)
app/src/zec/: AndroidManifest.xml  CMakeLists.txt
app/src/zec/cmake/: HunterGate.cmake
app/src/zec/cpp/: main.cpp  native-lib.cpp  serialize.h  uint256.cpp  util.cpp
app/src/zec/cpp/primitives/: transaction.h
app/src/zec/cpp/support/: cleanse.cpp  cleanse.h  pagelocker.h
app/src/zec/cpp/support/allocators/: secure.h  zeroafterfree.h
app/src/zec/cpp/zcash/: IncrementalMerkleTree.hpp
app/src/zec/include/: test_lib.h  zapling_lib.h
app/src/zec/java/com/gravilink/zcash/: RustAPI.java  ZCashException.java  ZCashTransactionInput.java  ZCashTransactionOutput.java  ZCashTransaction_taddr.java  ZCashWalletManager.java
app/src/zec/java/com/gravilink/zcash/crypto/: BrainKeyDict.java  DumpedPrivateKey.java  Sha256Hash.java  Utils.java
app/src/zec/java/com/gravilink/zcash/request/: AbstractZCashRequest.java  GetBalance_taddr.java  GetUTXOSRequest.java  UpdateTransactionCache_taddr.java
app/src/zec/java/com/guarda/ethereum/lifecycle/: AuthorizationViewModel.java  HistoryViewModel.java  ResyncViewModel.kt
app/src/zec/java/com/guarda/ethereum/managers/: TransactionsManager.java  WalletCreationCallback.java  WalletManager.java
app/src/zec/java/com/guarda/ethereum/models/constants/: Common.java
app/src/zec/java/com/guarda/ethereum/models/items/: BlockBookResponses.kt  RawBlockResponse.java  SaplingTreeModels.kt  TransactionItem.java  TransactionResponse.java  TransactionsListResponse.java  ZecTxListResponse.java  ZecTxResponse.java
app/src/zec/java/com/guarda/ethereum/rest/: Requestor.java
app/src/zec/java/com/guarda/ethereum/rxcall/: CallCleanDbLogOut.java  CallCreateWallet.java  CallDbFillHistory.java  CallFillHistory.java  CallNotesFromDb.java  CallRestoreWallet.java  CallUpdateFromDbHistory.java  CallUpdateTxDetails.java
app/src/zec/java/com/guarda/ethereum/views/activity/: AmountToSendActivity.java  CreateNewWalletActivity.java  PurchaseWemovecoinsActivity.java  RestoreFromBackupActivity.java  SellConfirmCoinifyActivity.java  SendingCurrencyActivity.java  TransactionDetailsActivity.java
app/src/zec/java/com/guarda/ethereum/views/adapters/: TransHistoryAdapter.java
app/src/zec/java/com/guarda/ethereum/views/fragments/: ResyncFragment.kt  TransactionHistoryFragment.java  UserWalletFragment.java
app/src/zec/java/com/guarda/zcash/: RustAPI.java  TxInTranspatent.java  TxOutTranspatent.java  WalletCallback.java  ZCashException.java  ZCashTransactionDetails_taddr.java  ZCashTransactionDetails_zaddr.java  ZCashTransactionOutput.java  ZCashTransaction_taddr.java  ZCashTransaction_ttoz.java  ZCashTransaction_zaddr.java  ZCashTransaction_ztot.java  ZCashWalletManager.java  ZcashTransaction.java  ZcashTransactionHelper.java
app/src/zec/java/com/guarda/zcash/crypto/: AddressFormatException.java  Bech32.java  BitcoinCashBitArrayConverter.java  BrainKeyDict.java  DumpedPrivateKey.java  ECKey.java  LazyECPoint.java  SecureRandomGenerator.java  SecureRandomStrengthener.java  Sha256Hash.java  Utils.java
app/src/zec/java/com/guarda/zcash/globals/: Optional.java  TypeConvert.java
app/src/zec/java/com/guarda/zcash/request/: AbstractZCashRequest.java  CreateTransaction_ttoz.java  CreateTransaction_zaddr.java  CreateTransaction_ztot.java  GetBalance_taddr.java  GetUTXOSRequest.java  PushTransaction_taddr.java  UpdateTransactionCache_taddr.java
app/src/zec/java/com/guarda/zcash/sapling/: LsaSingle.java  SyncBroadcastReceiver.kt  SyncManager.java  SyncProgress.kt  SyncService.kt
app/src/zec/java/com/guarda/zcash/sapling/api/: ProtoApi.java
app/src/zec/java/com/guarda/zcash/sapling/db/: AppDb.java  DbManager.java
app/src/zec/java/com/guarda/zcash/sapling/key/: SaplingCustomFullKey.java  SaplingFullViewingKey.java
app/src/zec/java/com/guarda/zcash/sapling/model/: OutputDescResp.java  WalletTx.java
app/src/zec/res/drawable/: ic_guarda_wallet.xml  ic_question_circle.xml
app/src/zec/res/drawable-v24/: ic_logo_txt.xml
app/src/zec/res/layout/: activity_sending_currency.xml
app/src/zec/res/raw/: saplingtreestates
app/src/zec/res/values/: strings.xml  styles.xml
app/src/zec/res/values-de/: strings.xml
app/src/zec/res/values-es/: strings.xml
app/src/zec/res/values-fr/: strings.xml
app/src/zec/res/values-it/: strings.xml
app/src/zec/res/values-ru/: strings.xml
app/src/zec/test-lib/: Cargo.toml
app/src/zec/test-lib/src/: lib.rs
app/src/zec/test-lib/zcash_client_backend/src/: constants.rs  encoding.rs  keystore.rs  sqlite.rs  transaction.rs  welding_rig.rs
app/src/zec/test-lib/zcash_proofs/src/sapling/: mod.rs  prover.rs
app/src/zec/zapling-lib/: CMakeLists.txt  Cargo.toml
app/src/zec/zapling-lib/src/: lib.rs
app/src/zec/zapling-lib/zcash_client_backend/: Cargo.toml  README.md
app/src/zec/zapling-lib/zcash_client_backend/src/: data.rs  lib.rs  prover.rs  wallet.rs
app/src/zec/zapling-lib/zcash_primitives/src/: lib.rs  merkle_tree.rs
app/src/zec/zapling-lib/zcash_primitives/src/transaction/: components.rs
rust-lib/src/main/: AndroidManifest.xml  CMakeLists.txt
rust-lib/src/main/cpp/: endian.h  main.cpp  prevector.h  serialize.h  util.h
rust-lib/src/main/cpp/primitives/: transaction.h
rust-lib/src/main/cpp/support/allocators/: zeroafterfree.h
rust-lib/src/main/cpp/zcash/: IncrementalMerkleTree.hpp
rust-lib/src/main/java/work/samosudov/rust_lib/: RustAPI.java
rust-lib/src/main/java/work/samosudov/rustlib/: RustAPI.java
rust-lib/src/main/java/work/samosudov/rustlib/crypto/: AddressFormatException.java  Base58.java  Bech32.java  BitcoinCashBitArrayConverter.java  Sha256Hash.java  Utils.java
rust-lib/src/main/res/values/: strings.xml
rust-lib/src/main/zapling-lib/src/: lib.rs
rust-lib/src/main/zapling-lib/zcash_client_backend/: Cargo.toml
rust-lib/src/main/zapling-lib/zcash_primitives/src/: note_encryption.rs
rust-lib/src/main/zapling-lib/zcash_proofs/src/sapling/: verifier.rs
(+1180 files in other folders)
