[package]
name = "test-lib"
version = "0.1.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bellman = { path = "bellman" }
crypto_api_chachapoly = "0.1"
ff = { path = "ff" }
jni = { version = "0.10", default-features = false }
sapling-crypto = { path = "sapling-crypto" }
rand = "0.4"
pairing = { path = "pairing" }
libc = "0.2"
lazy_static = "1"
zcash_client_backend = { path = "zcash_client_backend" }
zcash_primitives = { path = "zcash_primitives" }
zcash_proofs = { path = "zcash_proofs" }
zip32 = { path = "zip32" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"